kubernetes/ingress/traefik/traefik-daemonset.yaml
kind: DaemonSet
apiVersion: apps/v1
metadata:
  namespace: kube-system
  name: traefik
  labels:
    app: traefik

spec:
  selector:
    matchLabels:
      app: traefik
  template:
    metadata:
      labels:
        app: traefik
    spec:
      serviceAccountName: traefik-ingress-controller
      containers:
        - name: traefik
          image: traefik:v2.2
          args:
            - --configfile=/config/traefik.yaml
          volumeMounts:
            - mountPath: "/config"
              name: "config"

          ports:
            - name: web
              containerPort: 80
              hostPort: 8181
            - name: websecure
              containerPort: 443
              hostPort: 8443
            - name: admin
              containerPort: 8080
      volumes:
        - name: config
          configMap:
            name: traefik-config
