kubernetes/ingress/traefik/traefik-ui-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: traefik-ui-service
  namespace: kube-system

spec:
  type: NodePort
  selector:
    app: traefik
  ports:
    - protocol: TCP
      name: web
      port: 8000
    - protocol: TCP
      name: admin
      port: 8080
    - protocol: TCP
      name: websecure
      port: 4443
