kubernetes/ingress/traefik/nginx-demo.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: nginx-demo-deployment
    labels:
        app: nginx-demo

spec:
    replicas: 2
    selector:
        matchLabels:
            app: nginx-demo
    template:
        metadata:
            labels:
                app: nginx-demo
        spec:
            containers:
                - name: nginx
                  image: nginx:1.14-alpine
                  imagePullPolicy: IfNotPresent
                  ports:
                      - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
    name: nginx-demo-svc
    namespace: default
spec:
    selector:
        app: nginx-demo
    type: ClusterIP
    ports:
        - name: nginx-demo-web
          port: 80
          protocol: TCP

---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
    name: nginx-demo-ingress
    namespace: default
    annotations:
        kubernetes.io/ingress.class: traefik
spec:
    rules:
        - host: nginx-demo.sfkj.sit
          http:
              paths:
                  - path: /
                    backend:
                        serviceName: nginx-demo-svc
                        servicePort: 80
